Fix issue with position sticky and overflow hidden

--- a/css/bmp-editor.css
+++ b/css/bmp-editor.css
@@ -5,6 +5,7 @@
     grid-template-columns: repeat(auto-fill, 120px);
     grid-template-rows: repeat(auto-fill, 50px);
     grid-auto-rows: 50px;
+    justify-content: center;
 }
 
 .bmp-editor .bmp-group {
@@ -103,4 +104,8 @@
     font-family: monospace;
     font-size: 30px;
     color: #333;
+}
+
+section#bmp-section {
+    overflow: clip !important;
 }
